--- a/AmuayWildlifePark.html
+++ b/AmuayWildlifePark.html
@@ -30,7 +30,7 @@
                 <div class="bar"></div>
             </label>
         </div>
-        <h1>Wildlife Adventure Park</h1>
+        <h1>Amuay Wildlife Adventure Park</h1>
     </header>
     
     <input type="checkbox" id="toggle-sidebar" class="toggle-checkbox" hidden>
@@ -71,6 +71,7 @@
                 <a href="events.html">Events & Education</a>
                 <a href="info.html">Hours & Info</a>
                 <a href="map.html">Park Map</a>
+
             </div>
             <div class="footer-column">
                 <h3>Information</h3>
@@ -78,6 +79,10 @@
                 <a href="careers.html">Join Our Team</a>
                 <a href="tanganyika.html">Tanganyika Wildlife Park</a>
                 <a href="privacy.html">Privacy Policy</a>
+                <img src="img\noun-facebook-63243.svg" alt="Facebook Icon" class="social-icon">
+                <img src="img\noun-instagram-6204292.svg" alt="Facebook Icon" class="social-icon">
+                <img src="img\noun-twitter-5136821.svg" alt="Facebook Icon" class="social-icon">
+                <img src="img\noun-whatsapp-6592278.svg" alt="Facebook Icon" class="social-icon">
             </div>
         </div>
         <div class="footer-bottom">
