--- a/AboutUs.html
+++ b/AboutUs.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta></meta> charset="utf-8">
+    <meta charset="utf-8">
     <title>Amuay Wildlife Sanctuary - About Us</title>
     <link rel="stylesheet" type="text/css" href="AboutUs.css" />
 </head>
@@ -9,26 +9,34 @@
     <div class="top-bar">
         <nav>
             <ul>
-                <li><a href="AmuayWildlifePark.html">Home</a></li>
-                <li><a href="BookTicket.html">Ticket</a></li>
-                <li><a href="Contact.html">Contact</a></li>
-                <li><a href="AboutUs.html">About Us</a></li>
+                <li>
+                    <a href="AmuayWildlifePark.html">Home</a>
+                </li>
+                <li>
+                    <a href="BookTicket.html">Ticket</a>
+                </li>
+                <li>
+                    <a href="Contact.html">Contact</a>
+                </li>
+                <li>
+                    <a href="AboutUs.html">About Us</a>
+                </li>
             </ul>
         </nav>
         <div class="search-container">
             <form action="/search" method="get">
-                <input></input> type="text" placeholder="Search..." name="search">
+                <input type="text" placeholder="Search..." name="search">
                 <button type="submit">🔍</button>
             </form>
         </div>
-        <!-- 汉堡菜单触发器 -->
+        <
         <label for="toggle-sidebar" class="hamburger-menu">
             <div class="bar"></div>
             <div class="bar"></div>
             <div class="bar"></div>
         </label>
     </div>
-    <h1>Wildlife Adventure Park</h1>
+    <h1>Amuay Wildlife Adventure Park</h1>
 </header>
 <body>
     <div class="container">
@@ -37,42 +45,45 @@
         </header>
         <main>
             <section class="leftCol">
-                <img></img> src="Zebra.jpg" alt="Amuay Wildlife Park">
+                <div style="text-align: center;">
+                    <img src="./img/Zebra.jpeg" alt="Amuay Wildlife Park" class="responsive-image">
+                </div>
             </section>
+
             <section class="rightCol">
                 <div class="content">
+                    <h2>Our Mission</h2>
+                    <h2>Amuay Wildlife Sanctuary: A Haven for Nature and Education</h2>
+                    <p>Amuay Wildlife Sanctuary stands as a beacon of conservation, dedicated to preserving the natural beauty and biodiversity of its environment. Our mission extends beyond mere protection, fostering a space for education and recreation for all visitors.</p>
+                    <p>At the heart of our mission lies the unwavering commitment to safeguard the park's delicate ecosystem. Sustainable management practices are paramount, ensuring the long-term health of the flora and fauna we hold dear. We believe education is key to fostering environmental awareness and appreciation. Through engaging programs and guided tours, visitors gain a deeper understanding of the wonders that surround them.</p>
+                    <p>Our dedication extends beyond the park boundaries. We actively engage with local communities, fostering a spirit of stewardship and collaboration. By supporting conservation initiatives, we create a unified front in protecting our shared natural heritage.</p>
+                    <p>Looking to the future, Amuay Wildlife Sanctuary strives for continuous improvement. We are dedicated to expanding our facilities and services, constantly seeking ways to enhance the visitor experience. It is our fervent hope that by fulfilling our mission, we ensure Amuay Wildlife Sanctuary thrives for generations to come, remaining a cherished haven for all who explore its wonders.</p>
+                </div>
+            </section>
+
+            <section class="leftCol">
+                <div class="content">
                     <h2>Our History</h2>
-                    <p>Amuay Wildlife Park has a rich history dating back to its establishment in [year]. Originally conceived as a sanctuary to protect the diverse flora and fauna indigenous to the region, the park has evolved into a premier nature reserve recognized internationally for its conservation efforts.</p>
+                    <p>Amuay Wildlife Park has a rich history dating back to its establishment. Originally conceived as a sanctuary to protect the diverse flora and fauna indigenous to the region, the park has evolved into a premier nature reserve recognized internationally for its conservation efforts.</p>
                     <p>Over the years, the park has witnessed significant milestones, including the expansion of protected areas, the implementation of sustainable management practices, and collaborations with local communities and international organizations.</p>
                     <p>Today, Amuay Wildlife Sanctuary stands as a testament to the commitment of all those involved in its preservation, serving as a vital habitat for countless species and a source of inspiration for visitors from around the world.</p>
                 </div>
             </section>
-            <section class="leftCol">
-                <h2>Rescue</h2>
-                <p>Too many animals are exploited and abused in places such as laboratories, circuses, roadside zoos and the illegal pet trade.</p>
-                <p>Amuay Wildlife Sanctuary offers sanctuary to many animals that have been persecuted and hunted, providing them with a safe haven.</p>
-                <ul>
-                    <li>Brown Bears</li>
-                    <li>Wolves</li>
-                    <li>Lynx</li>
-                    <li>Wild Boar</li>
-                </ul>
-                <p>We offer them immediate medical care, an environment tailored to their needs, food, and enrichment to promote their well-being.</p>
-            </section>
+
             <section class="rightCol">
                 <div class="content">
-                    <h2>Our Mission</h2>
-                    <p>At Amuay Wildlife Sanctuary, our mission is to conserve and protect the natural beauty and biodiversity of our environment while providing educational and recreational opportunities for all visitors.</p>
-                    <p>We are dedicated to:</p>
-                    <ul>
-                        <li>Preserving the park's delicate ecosystem through sustainable management practices.</li>
-                        <li>Offering educational programs and guided tours to promote environmental awareness and appreciation.</li>
-                        <li>Engaging with local communities to foster stewardship and support conservation initiatives.</li>
-                        <li>Continuously improving and expanding our facilities and services to enhance visitor experiences.</li>
-                    </ul>
-                    <p>By fulfilling our mission, we strive to ensure that Amuay Wildlife Sanctuary remains a thriving sanctuary for future generations to enjoy and cherish.</p>
+                    <h2>Rescue</h2>
+                    <p>Too many animals face unimaginable cruelty at the hands of humans. Laboratories subject them to painful experiments, circuses force them into unnatural acts, roadside zoos confine them in cramped, unsuitable cages, and the illegal pet trade rips them from their natural habitats, condemning them to a life of fear and isolation.</p>
+                    <p>Sanctuaries like Amuay Wildlife Sanctuary stand as a beacon of hope in this bleak landscape. We offer these persecuted and hunted animals a safe haven, a place where the cycle of abuse ends and the path to healing begins.</p>
+                    <p>Our work extends far beyond simply providing shelter. Many rescued animals arrive with physical and psychological wounds from their past. We provide immediate medical care, addressing their injuries and illnesses. But healing goes deeper. Our dedicated team works to rebuild their trust in humans and rediscover their natural instincts.</p>
+                    <p>By rescuing animals, we don't just save individual lives, we send a powerful message. Amuay Wildlife Sanctuary serves as a living testament to the importance of compassion and the power of rehabilitation. Through education and outreach programs, we inspire visitors to become advocates for animal welfare and fight against exploitation.</p>
+                    <p>We believe that together, we can create a world where all animals are treated with respect and have the chance to live a life free from suffering. Join us in making a difference.</p>
                 </div>
             </section>
+
+            <div class="mission-image">
+                <img src="./img/lion.jpeg" alt="Mission" class="responsive-image">
+            </div>
         </main>
         <footer class="site-footer">
             <div class="footer-top">
