--- a/volunteer.html
+++ b/volunteer.html
@@ -47,9 +47,13 @@
             <h3>Benefits of Volunteering</h3>
             <ul>
                 <li>Give back to your community and the environment.</li>
+                <br>
                 <li>Gain new skills and knowledge.</li>
+                <br>
                 <li>Meet like-minded people and build connections.</li>
+                <br>
                 <li>Enjoy the outdoors and connect with nature.</li>
+                <br>
                 <li>Contribute to protecting our natural heritage.</li>
             </ul>
         </section>
@@ -69,17 +73,34 @@
             </div>
             </section>
 
-        <section class="how-to-apply">
-            <h3>How to Apply</h3>
-            <ol>
-                <li>Browse volunteer opportunities.</li>
-                <li>Fill out a volunteer application.</li>
-                <li>Attend a volunteer orientation.</li>
-                <li>Start making a difference!</li>
-            </ol>
-            <br>
-            <a href="#" class="button">Apply Now</a>
-        </section>
+            <section class="how-to-apply">
+                <br>
+                <div class="application-form" id="application-form" style="display: none;"> 
+                    <fieldset>
+                        <br>
+                         <legend>Volunteer Application</legend>
+                        <label for="name">Name:</label>
+                        <input type="text" id="name" name="name">
+                        </fieldset>
+                </div>
+
+            
+            <fieldset class="application-form">
+                <legend>Volunteer Application</legend>
+                <div class="form-group">
+                    <label for="name">Name:</label>
+                    <input type="text" id="name" name="name">
+                </div>
+                <div class="form-group">
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email">
+                </div>
+                </fieldset>
+                <br>
+                <a href="#application-form" class="button" id="apply-button">Apply Now</a> 
+                <br>
+                <br>
+            </section>
     </main>
     <footer class="site-footer">
         <footer class="site-footer">
