--- a/AboutUs.html
+++ b/AboutUs.html
@@ -5,52 +5,40 @@
     <title>Amuay Wildlife Sanctuary - About Us</title>
     <link rel="stylesheet" type="text/css" href="AboutUs.css" />
 </head>
-<header>
-    <div class="top-bar">
-        <nav>
-            <ul>
-                <li>
-                    <a href="AmuayWildlifePark.html">Home</a>
-                </li>
-                <li>
-                    <a href="BookTicket.html">Ticket</a>
-                </li>
-                <li>
-                    <a href="Contact.html">Contact</a>
-                </li>
-                <li>
-                    <a href="AboutUs.html">About Us</a>
-                </li>
-            </ul>
-        </nav>
-        <div class="search-container">
-            <form action="/search" method="get">
-                <input type="text" placeholder="Search..." name="search">
-                <button type="submit">🔍</button>
-            </form>
-        </div>
-        <
-        <label for="toggle-sidebar" class="hamburger-menu">
-            <div class="bar"></div>
-            <div class="bar"></div>
-            <div class="bar"></div>
-        </label>
-    </div>
-    <h1>Amuay Wildlife Adventure Park</h1>
-</header>
 <body>
     <div class="container">
         <header>
-            <h1 class="sanctuary-name">About Amuay Wildlife Sanctuary</h1>
-        </header>
-        <main>
-            <section class="leftCol">
-                <div style="text-align: center;">
-                    <img src="./img/Zebra.jpeg" alt="Amuay Wildlife Park" class="responsive-image">
+            <div class="top-bar">
+                <nav>
+                    <ul>
+                        <li><a href="AmuayWildlifePark.html">Home</a></li>
+                        <li><a href="BookTicket.html">Ticket</a></li>
+                        <li><a href="Contact.html">Contact</a></li>
+                        <li><a href="AboutUs.html">About Us</a></li>
+                    </ul>
+                </nav>
+                <div class="search-container">
+                    <form action="/search" method="get">
+                        <input type="text" placeholder="Search..." name="search">
+                        <button type="submit">🔍</button>
+                    </form>
                 </div>
-            </section>
+                <label for="toggle-sidebar" class="hamburger-menu">
+                    <div class="bar"></div>
+                    <div class="bar"></div>
+                    <div class="bar"></div>
+                </label>
+            </div>
+            <h1>Amuay Wildlife Adventure Park</h1>
+        </header>
 
-            <section class="rightCol">
+        <div class="main-content">
+            <section>
+            </section>
+            <div style="text-align: center;">
+                <img src="./img/Zebra.jpeg" alt="Amuay Wildlife Park" class="responsive-image">
+            </div>
+            <section>
                 <div class="content">
                     <h2>Our Mission</h2>
                     <h2>Amuay Wildlife Sanctuary: A Haven for Nature and Education</h2>
@@ -60,8 +48,10 @@
                     <p>Looking to the future, Amuay Wildlife Sanctuary strives for continuous improvement. We are dedicated to expanding our facilities and services, constantly seeking ways to enhance the visitor experience. It is our fervent hope that by fulfilling our mission, we ensure Amuay Wildlife Sanctuary thrives for generations to come, remaining a cherished haven for all who explore its wonders.</p>
                 </div>
             </section>
-
-            <section class="leftCol">
+            <div style="text-align: center;">
+                <img src="./img/zoo.jpg" alt="Amuay Wildlife Park" class="responsive-image">
+            </div>
+            <section>
                 <div class="content">
                     <h2>Our History</h2>
                     <p>Amuay Wildlife Park has a rich history dating back to its establishment. Originally conceived as a sanctuary to protect the diverse flora and fauna indigenous to the region, the park has evolved into a premier nature reserve recognized internationally for its conservation efforts.</p>
@@ -69,8 +59,10 @@
                     <p>Today, Amuay Wildlife Sanctuary stands as a testament to the commitment of all those involved in its preservation, serving as a vital habitat for countless species and a source of inspiration for visitors from around the world.</p>
                 </div>
             </section>
-
-            <section class="rightCol">
+            <div style="text-align: center;">
+                <img src="./img/Parrot.jpg" alt="Amuay Wildlife Park" class="responsive-image">
+            </div>
+            <section>
                 <div class="content">
                     <h2>Rescue</h2>
                     <p>Too many animals face unimaginable cruelty at the hands of humans. Laboratories subject them to painful experiments, circuses force them into unnatural acts, roadside zoos confine them in cramped, unsuitable cages, and the illegal pet trade rips them from their natural habitats, condemning them to a life of fear and isolation.</p>
@@ -80,11 +72,8 @@
                     <p>We believe that together, we can create a world where all animals are treated with respect and have the chance to live a life free from suffering. Join us in making a difference.</p>
                 </div>
             </section>
+        </div>
 
-            <div class="mission-image">
-                <img src="./img/lion.jpeg" alt="Mission" class="responsive-image">
-            </div>
-        </main>
         <footer class="site-footer">
             <div class="footer-top">
                 <div class="footer-contact">
@@ -106,7 +95,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>copy; 2024 All Rights Reserved</p>
+                <p>&copy; 2024 All Rights Reserved</p>
             </div>
         </footer>
     </div>
