--- a/Contact.html
+++ b/Contact.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -23,11 +24,15 @@
                 </form>
             </div>
         </div>
+        <h2 style="color: white; text-align: center;">CONTACT US</h2>
     </header>
+    <div class="image-container">
+        <img src="./img/Contact2.jpg" alt="Amuay Wildlife Park" class="responsive-image" style="width: 50%; height: auto;">
+    </div>
 
     <main>
         <div class="contact-info">
-            <h2 style="color: white; text-align: center;">CONTACT US</h2>
+            
             <hr>
 
             <p style="color: white;">Amuay Wildlife Park, we want all our visitors to have an amazing experience. If you have any questions, requests, or feedback you'd like to share to help us improve the park, please don't hesitate to get in touch. We value your input and will use it to make Amuay Wildlife Park the best it can be!</p>
@@ -38,6 +43,7 @@
             </ul>
 
         </div>
+
     </main>
 
     <div class="get-in-touch">
@@ -66,6 +72,10 @@
                 <br>
                 <p style="color: blue; margin-top: 10px; text-align: center;">Opening Times: Mon-Sun, 9:30 AM - 6:00 PM (Last Entry: 5:30 PM)</p>
             </form>
+
+        </div>
+        <div style="text-align: center;">
+            <img src="./img/contact.jpg" alt="Amuay Wildlife Park" class="responsive-image" style="width: 50%;">
         </div>
         <footer class="site-footer">
             <div class="footer-top">
