--- a/Donate.html
+++ b/Donate.html
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+User
+<!DOCTYPE html>
 <html>
 <head>
     <title>Amuay Wildlife Sanctuary - Donate Now</title>
@@ -37,10 +38,20 @@
 
 
             </section>
+           
             <section>
                 <h2 style="color: black;">Corporate Sponsorship​</h2>
                 <p style=color: black;">Explore fantastic opportunities to showcase your brand as a company who cares about wildlife and the sustainable economy.</p>
             </section>
+        </div>
+        <div style="display: flex; justify-content: center;">
+            <div style="margin-right: 20px;">
+                <div class="image-container">
+                    <img src="./img/Donate.jpg" alt="Amuay Wildlife Park" class="responsive-image">
+                    <img src="./img/Donate2.jpg" alt="Amuay Wildlife Park" class="responsive-image" id="donate2-image">
+                </div>
+
+            </div>
         </div>
 
         <div class="contact-info">
