--- a/Education.html
+++ b/Education.html
@@ -31,7 +31,10 @@
             </label>
         </div>
     </header>
+    <div class="image-container">
 
+        <img src="./img/education2.jpg" alt="Amuay Wildlife Park" class="responsive-image" id="donate2-image">
+    </div>
     <main>
         <div class="contact-info">
             <h2 style="color: beige; text-align: center;">EDUCATIONAL TOURS</h2>
@@ -86,7 +89,7 @@
             </div>
         </div>
     </main>
-
+    <img src="./img/education.jpg" alt="Amuay Wildlife Park" class="responsive-image">
     <footer class="site-footer">
         <div class="footer-top">
             <div class="footer-contact">
